tests/unclosed-string-constant/out.txt
error: unclosed string constant
  ┌─ err.sml:1:9
  │
1 │ val _ = "bad
  │         ^^^^

lexing failed
